Compatibility with Graal